# quaternion

./: .appveyor.cmd  .appveyor.yml  .binstar.yml  .conda_deploy.sh  .gitignore  .meta_yaml_replacer.py  .readthedocs.yml  .travis.yml  .travis_conda.sh  .travis_install.sh  LICENSE  MANIFEST.in  README  README.md  README.txt  __init__.py  _version.py  appveyor.yml  bld.bat  build.py  calculus.py  conda_build_config.yaml  constraints-python27.txt  constraints.txt  deploy.sh  derivative.py  dual_quaternion.c  dual_quaternion.h  info.py  math_msvc_compatibility.h  means.py  meta.yaml  mkdocs.yml  numba.py  numba_quaternion.py  numba_wrapper.py  numpy_dual_quaternion.c  numpy_quaternion.c  pipify.sh  pyproject.toml  (+14 more)
.appveyor/: anaconda-push.py  move-conda-package.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: parse_bump_rule.py  parse_version.py  update_versions.py
.github/workflows/: build.yml  test_win.yml
auto_version/: LICENSE  README.md  __init__.py  travis_install_conda.sh  update_anaconda_org.sh
deploy/: build_macosx_wheels.sh  build_manylinux_wheels.sh
docs/: Makefile  api.rst  calculus.md  conf.py  index.rst  means.md  modules.rst  numpy.md  quaternion.md  quaternion.rst  style.css  time_series.md
docs/javascript/: mathjax.js
quaternion/: __init__.py  calculus.py  numba_wrapper.py
src/: math_msvc_compatibility.h  numpy_quaternion.c  quaternion.c  quaternion.h
src/quaternion/: __init__.py  calculus.py  means.py  numba_wrapper.py  quaternion_time_series.py
test/: ScratchPaper.ipynb  test_calculus.py  test_dual_quaternion.py  test_quaternion.py
tests/: ScratchPaper.ipynb  script.py  test_calculus.py  test_quaternion.py
